Change to Branch2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div style="float: left; position: relative; top:5px; left:10px;">
                 <a href="#"><img alt="Logo" src="images/logo.png"/></a>
             </div>
-            <h1>Event App Change 1st</h1>
+            <h1>Event App Change Branch Two</h1>
         </div>
 
         <div data-role="content" style="background: #000000 url('images/img-bg4.jpg'); -webkit-background-size: 100% auto;" >
