--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <br/>
             <div class="bg-box-white alpha9">
-                <p><strong>Not a member yet?</strong></p>
+                <p><strong>Not a member yet? This is to be seen in Testing version</strong></p>
                 <a href="#user_signup" data-role="button" data-icon="arrow-r" data-iconpos="right">Sign Up</a>
             </div>
         </div>
